--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
     "@rails/webpacker": "^3.0.2",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-apollo": "1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
+    "redux-form": "^7.1.1",
+    "redux-thunk": "^2.2.0",
     "typeface-roboto": "^0.0.41"
   },
   "devDependencies": {
