--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
@@ -17,6 +18,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-form": "^7.1.1",
+    "redux-form-material-ui": "^5.0.0-beta.1",
     "redux-thunk": "^2.2.0",
     "typeface-roboto": "^0.0.41"
   },
