--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typeface-roboto": "^0.0.41"
   },
   "devDependencies": {
+    "react-hot-loader": "^3.0.0",
     "webpack-dev-server": "^2.9.3"
   }
 }
