add immutable and test jest

--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,16 @@
     ],
     "react"
   ],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "env"
+        ],
+        "react"
+      ]
+    }
+  },
   "plugins": [
     "react-hot-loader/babel",
     "syntax-dynamic-import",
