--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "^3.0.2",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "currency-formatter": "^1.3.0",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.9",
     "lodash": "^4.17.4",
