--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,10 @@
       2,
       "always"
     ],
-    "comma-dangle": "off",
+    "comma-dangle": [
+      "error",
+      "always-multiline"
+    ],
     "quotes": [
       "error",
       "double"
@@ -45,6 +48,6 @@
     "space-before-function-paren": [
       "error",
       "never"
-    ]
+    ],
   }
 }
