add start_url manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,5 +29,6 @@
       "type": "image/png"
     }
   ],
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "start_url": "https://waiterapp-staging.herokuapp.com/app/home"
 }
