--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "currency-formatter": "^1.3.0",
@@ -16,10 +17,10 @@
     "material-ui": "^1.0.0-beta.18",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
-    "react": "15",
+    "react": "^16.1.0",
     "react-apollo": "1",
     "react-confirm": "^0.1.16",
-    "react-dom": "15",
+    "react-dom": "^16.1.0",
     "react-dropzone": "^4.2.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -35,7 +36,7 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-15": "^1.0.3",
+    "enzyme-adapter-react-16": "^1.0.4",
     "jest": "^21.2.1",
     "react-hot-loader": "^3.1.1",
     "react-test-renderer": "15",
