--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "redux-form": "^7.1.1",
     "redux-form-material-ui": "^5.0.0-beta.1",
     "redux-thunk": "^2.2.0",
-    "typeface-roboto": "^0.0.41"
+    "ts-loader": "^3.1.1",
+    "typeface-roboto": "^0.0.41",
+    "typescript": "^2.6.1"
   },
   "devDependencies": {
+    "@types/webpack-env": "^1.13.2",
     "babel-jest": "^21.2.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
